--- a/curso_aws_project01/src/main/resources/application.properties
+++ b/curso_aws_project01/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/aws_project01?createDatabaseIfNotExist=true
