--- a/curso_aws_project01/build.gradle
+++ b/curso_aws_project01/build.gradle
@@ -27,7 +27,7 @@ sourceCompatibility = '17'
 
 bootJar {
 	baseName = "curso_aws_project01"
-	version = '1.9.1'
+	version = '2.2.0'
 }
 
 task unpack(type: Copy){
@@ -52,6 +52,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.887';
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.1'
