--- a/curso_aws_project01/src/main/resources/application.properties
+++ b/curso_aws_project01/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/aws_project01?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
+
+aws.region=us-east-1
+aws.sns.topic.product.events.arn=product-events
